move contact and links sections to left panel

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
 title: Michał Michalczuk
-description: @michalczukm | full-stack software developer and IT trainer
+description: full-stack software developer and IT trainer
 logo: /assets/michalczukm.png
 show_downloads: false
