added google analitics

--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ title: Michał Michalczuk
 description: full-stack software developer and IT trainer
 logo: /assets/michalczukm.png
 show_downloads: false
+google_analytics: UA-118651623-1
