--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
+  "name": "michalczukm",
+  "description": "michalczukm personal site",
   "version": "1.0.0",
-  "author": "Hunter Chang",
+  "author": "Michał Michalczuk <michalczukm@gmail.com> (https://michalczukm.xyz/)",
   "dependencies": {
     "dayjs": "^1.8.14",
     "gatsby": "^2.2.9",
