--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,3 @@
-language: ruby
-rvm:
-- 2.2
-script: "bundle exec jekyll build"
-
 language: node_js
 node_js:
   - "stable"
@@ -11,10 +6,10 @@ cache:
   - node_modules
 deploy:
   provider: pages
-  skip-cleanup: true
-  github-token: $GITHUB_TOKEN
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN
   local_dir: public
-  keep-history: true
+  keep_history: true
   on:
     branch: master
 before_script:
