gatsby v2 requires node v12 - set constraint

--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "gh-pages": "^2.0.1",
     "prettier": "^1.14.2"
   },
+  "engines": {
+    "node": "^12.19.0"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/gatsbyjs/gatsby-starter-default"
