--- a/old-page/package.json
+++ b/old-page/package.json
@@ -10,10 +10,17 @@
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.10",
     "gatsby-plugin-sass": "^2.0.11",
-    "node-sass": "^4.11.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-helmet": "^5.2.0"
+  },
+  "resolutions": {
+		"sharp": "^0.32.0"
+	},
+  "overrides": {
+    "gatsby-plugin-manifest": {
+      "sharp": "^0.32.0"
+    }
   },
   "keywords": [
     "gatsby"
